Fix icon z-index

--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -3,6 +3,7 @@
     float: right;
     opacity: 1;
     margin-top: -5px;
+    z-index: 50;
 }
 
 .tooltip .tooltiptext {
